--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap" rel="stylesheet">
 </head>
-<body>
-    
+<body class="main-content">
+    <header class="section sect1 header active">
+        
+    </header>
+    <main>
+        <section class="section sect2 about"></section>
+        <section class="section sect3 portfolio"></section>
+        <section class="section sect4 blogs"></section>
+        <section class="section sect5 contact"></section>
+    </main>
 </body>
 </html>
