--- a/index.html
+++ b/index.html
@@ -1,25 +1,48 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Barbara Ruiz Portfolio</title>
-    <link rel="stylesheet" href="styles/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Barbara Ruiz Portfolio</title>
+  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css"
+    integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@0;1&display=swap" rel="stylesheet">
 </head>
+
 <body class="main-content">
-    <header class="section sect1 header active">
-        
-    </header>
-    <main>
-        <section class="section sect2 about"></section>
-        <section class="section sect3 portfolio"></section>
-        <section class="section sect4 blogs"></section>
-        <section class="section sect5 contact"></section>
-    </main>
+  <header class="section sect1 header active">
+
+  </header>
+  <main>
+    <section class="section sect2 about"></section>
+    <section class="section sect3 portfolio"></section>
+    <section class="section sect4 blogs"></section>
+    <section class="section sect5 contact"></section>
+  </main>
+
+  <div class="controls">
+    <div class="control control-1 active-btn" data-id="header">
+      <i class="fa-solid fa-house-user"></i></i>
+    </div>
+    <div class="control control-2" data-id="about">
+      <i class="fa-solid fa-user"></i></i>
+    </div>
+    <div class="control control-3" data-id="portfolio">
+      <i class="fa-solid fa-briefcase"></i></i>
+    </div>
+    <div class="control control-4" data-id="blog">
+      <i class="fa-solid fa-rss"></i>
+    </div>
+    <div class="control control-5" data-id="contact">
+      <i class="fa-solid fa-envelope"></i></i>
+    </div>
+  </div>
 </body>
+
 </html>
