add interaction to active button section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </main>
 
   <div class="controls">
-    <div class="control control-1 active-btn" data-id="header">
+    <div class="control control-1 active-btn">
       <i class="fa-solid fa-house-user"></i></i>
     </div>
     <div class="control control-2" data-id="about">
@@ -43,6 +43,8 @@
       <i class="fa-solid fa-envelope"></i></i>
     </div>
   </div>
+
+  <script src="app.js"></script>
 </body>
 
 </html>
