--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
 </head>
 
 <body class="main-content">
-  <header class="section sect1 header active">
+  <header class="section sect1 header active" id="home">
 
   </header>
   <main>
-    <section class="section sect2 about"></section>
-    <section class="section sect3 portfolio"></section>
-    <section class="section sect4 blogs"></section>
-    <section class="section sect5 contact"></section>
+    <section class="section sect2 about" id="about"></section>
+    <section class="section sect3 portfolio" id="portfolio"></section>
+    <section class="section sect4 blogs" id="blog"></section>
+    <section class="section sect5 contact" id="contact"></section>
   </main>
 
   <div class="controls">
-    <div class="control control-1 active-btn">
+    <div class="control control-1 active-btn" data-id="home">
       <i class="fa-solid fa-house-user"></i></i>
     </div>
     <div class="control control-2" data-id="about">
