--- a/index.html
+++ b/index.html
@@ -17,7 +17,23 @@
 
 <body class="main-content">
   <header class="section sect1 header active" id="home">
-
+    <div class="header-content">
+      <div class="left-header">
+        <div class="h-shape"></div>
+        <img src="img/profile-pic.jpg" alt="picture abour me" class="profile-pic">
+      </div>
+      <div class="right-header">
+        <h1 class="name">
+          Hi, I am <span>Barbara.</span>
+          A web developer.
+        </h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed ipsa odio reiciendis incidunt est distinctio recusandae, autem fugit earum necessitatibus tempore sint placeat tenetur, impedit inventore? Temporibus atque aspernatur cum?</p>
+        <a href="" class="main-btn">
+          <span class="btn-text">download cv</span>
+          <span class="btn-icon"><i class="fa-solid fa-file-arrow-down"></i></span>
+        </a>
+      </div>
+    </div>
   </header>
   <main>
     <section class="section sect2 about" id="about"></section>
