download cv icon styles added but nor working yet

--- a/index.html
+++ b/index.html
@@ -20,18 +20,19 @@
     <div class="header-content">
       <div class="left-header">
         <div class="h-shape"></div>
-        <img src="img/profile-pic.jpg" alt="picture abour me" class="profile-pic">
+        <img src="img/profile-pic.jpg" alt="picture about me" class="profile-pic">
       </div>
       <div class="right-header">
         <h1 class="name">
           Hi, I am <span>Barbara.</span>
           A web developer.
         </h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed ipsa odio reiciendis incidunt est distinctio recusandae, autem fugit earum necessitatibus tempore sint placeat tenetur, impedit inventore? Temporibus atque aspernatur cum?</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed ipsa odio reiciendis incidunt est distinctio recusandae, autem fugit earum necessitatibus tempore sint placeat tenetur, impedit inventore? Temporibus atque aspernatur cum? afd</p>
+        <div class="btn-con">
         <a href="" class="main-btn">
           <span class="btn-text">download cv</span>
           <span class="btn-icon"><i class="fa-solid fa-file-arrow-down"></i></span>
-        </a>
+        </a></div>
       </div>
     </div>
   </header>
@@ -61,6 +62,7 @@
   </div>
 
   <script src="app.js"></script>
+  
 </body>
 
 </html>
