--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Barbara Ruiz Portfolio</title>
+  <link rel="icon" href="img/favicon.ico" />
   <link rel="stylesheet" href="styles/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -27,17 +28,46 @@
           Hi, I am <span>Barbara.</span>
           A web developer.
         </h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed ipsa odio reiciendis incidunt est distinctio recusandae, autem fugit earum necessitatibus tempore sint placeat tenetur, impedit inventore? Temporibus atque aspernatur cum? afd</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed ipsa odio reiciendis incidunt est distinctio
+          recusandae, autem fugit earum necessitatibus tempore sint placeat tenetur, impedit inventore? Temporibus atque
+          aspernatur cum? afd</p>
         <div class="btn-con">
-        <a href="" class="main-btn">
-          <span class="btn-text">download cv</span>
-          <span class="btn-icon"><i class="fa-solid fa-file-arrow-down"></i></span>
-        </a></div>
+          <a href="" class="main-btn">
+            <span class="btn-text">download cv</span>
+            <span class="btn-icon"><i class="fa-solid fa-file-arrow-down"></i></span>
+          </a>
+        </div>
       </div>
     </div>
   </header>
   <main>
-    <section class="section sect2 about" id="about"></section>
+    <section class="section sect2 about" id="about">
+      <div class="main-title">
+        <h2>About <span>me</span><span class="bg-text">my stats</span></h2>
+        <div class="about-container">
+          <div class="left-about">
+            <h4>Information about me</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum dicta amet inventore perspiciatis! Nisi
+              esse quaerat illum doloribus vero ab neque ducimus, ut quasi et facere rem quam fugit natus!</p>
+            <div class="btn-con">
+              <a href="" class="main-btn">
+                <span class="btn-text">download cv</span>
+                <span class="btn-icon"><i class="fa-solid fa-file-arrow-down"></i></span>
+              </a>
+            </div>
+          </div>
+          <div class="right-about">
+            <div class="about-item">
+              <div class="abt-text">
+                <p class="large-text">random</p>
+                <p class="small-text">Projects <br /> I am working on
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="section sect3 portfolio" id="portfolio"></section>
     <section class="section sect4 blogs" id="blog"></section>
     <section class="section sect5 contact" id="contact"></section>
@@ -62,7 +92,7 @@
   </div>
 
   <script src="app.js"></script>
-  
+
 </body>
 
 </html>
