--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
           Hi, I am <span>Barbara.</span>
           A web developer.
         </h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed ipsa odio reiciendis incidunt est distinctio
+        <p>Hello! Be patient, please. This site is under construction 
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed ipsa odio reiciendis incidunt est distinctio
           recusandae, autem fugit earum necessitatibus tempore sint placeat tenetur, impedit inventore? Temporibus atque
           aspernatur cum? afd</p>
         <div class="btn-con">
@@ -47,7 +48,8 @@
         <div class="about-container">
           <div class="left-about">
             <h4>Information about me</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum dicta amet inventore perspiciatis! Nisi
+            <p>Hello! Be patient, please. This site is under construction 
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum dicta amet inventore perspiciatis! Nisi
               esse quaerat illum doloribus vero ab neque ducimus, ut quasi et facere rem quam fugit natus!</p>
             <div class="btn-con">
               <a href="" class="main-btn">
@@ -59,13 +61,59 @@
           <div class="right-about">
             <div class="about-item">
               <div class="abt-text">
-                <p class="large-text">random</p>
+                <p class="large-text">number of projects</p>
                 <p class="small-text">Projects <br /> I am working on
                 </p>
+              </div>
+            </div><div class="about-item">
+              <div class="abt-text">
+                <p class="large-text">p2</p>
+                <p class="small-text">Years of<br /> experience
+                </p>
+              </div>
+          </div>
+        </div>
+      <div class="about-stats">
+        <h4 class="stat-title">My Skills</h4>
+        <div class="progress-bars">
+          <div class="progress-bar">
+            <p class="prog-title">HTML5</p>
+            <div class="progress-con">
+              <p class="prog text">90%</p>
+              <div class="progress">
+                <span class="html"></span>
+              </div>
+            </div>
+          </div>
+          <div class="progress-bar">
+            <p class="prog-title">CSS</p>
+            <div class="progress-con">
+              <p class="prog text">90%</p>
+              <div class="progress">
+                <span class="css"></span>
+              </div>
+            </div>
+          </div>
+          <div class="progress-bar">
+            <p class="prog-title">JavaScript</p>
+            <div class="progress-con">
+              <p class="prog text">90%</p>
+              <div class="progress">
+                <span class="javascript"></span>
+              </div>
+            </div>
+          </div>
+          <div class="progress-bar">
+            <p class="prog-title">React</p>
+            <div class="progress-con">
+              <p class="prog text">90%</p>
+              <div class="progress">
+                <span class="react"></span>
               </div>
             </div>
           </div>
         </div>
+      </div>
       </div>
     </section>
     <section class="section sect3 portfolio" id="portfolio"></section>
