subsanadas un par de faltas de ortografía

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           Hi, I am <span>Barbara:</span>
           Java developer.
         </h1>
-        <p>Wellcome to my portfolio. Here you can discover about me and what I do.
+        <p>Welcome to my portfolio. Here you can discover about me and what I do.
         </p>
         <div class="btn-con">
           <a href="" class="main-btn">
@@ -457,7 +457,7 @@
                   <span>Mobile Number: </span>
                 </div>
                 <p>
-                  <span>:(+34) 661561274</span>
+                  <span>(+34) 661561274</span>
                 </p>
               </div>
               <div class="contact-item">
