agregado el historial, los proyectos, los enlaces y descarga de cv

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p>Welcome to my portfolio. Here you can discover about me and what I do.
         </p>
         <div class="btn-con">
-          <a href="" class="main-btn">
+          <a href="https://drive.google.com/file/d/1i2YVuIMZxujArND8UbJxBtfAXrxF6i8W/view?usp=share_link" class="main-btn">
             <span class="btn-text">Download CV</span>
             <span class="btn-icon"><i class="fas fa-download"></i></span>
           </a>
@@ -53,7 +53,7 @@
             professional career learning Java and that is what I am focused on. Currently I am leaning Spring framework.
           </p>
           <div class="btn-con">
-            <a href="#" class="main-btn">
+            <a href="https://drive.google.com/file/d/1i2YVuIMZxujArND8UbJxBtfAXrxF6i8W/view?usp=share_link" class="main-btn">
               <span class="btn-text">Download CV</span>
               <span class="btn-icon"><i class="fas fa-download"></i></span>
             </a>
@@ -76,193 +76,176 @@
       </div>
       <div class="about-stats">
         <h4 class="stat-title">My Skills</h4>
-        <!-- <div class="progress-bars">
+        <div class="progress-bars">
           <div class="progress-bar">
-            <p class="prog-title">html5</p>
+            <p class="prog-title">Java</p>
             <div class="progress-con">
-              <p class="prog-text">80%</p>
+              <p class="prog-text"></p>
               <div class="progress">
-                <span class="html"></span>
+                <span class="full"></span>
               </div>
             </div>
           </div>
           <div class="progress-bar">
-            <p class="prog-title">css3</p>
+            <p class="prog-title">MySQL</p>
             <div class="progress-con">
-              <p class="prog-text">95%</p>
+              <p class="prog-text"></p>
               <div class="progress">
-                <span class="css"></span>
+                <span class="full"></span>
               </div>
             </div>
           </div>
           <div class="progress-bar">
-            <p class="prog-title">javascript</p>
+            <p class="prog-title">JavaScript</p>
             <div class="progress-con">
-              <p class="prog-text">75%</p>
+              <p class="prog-text"></p>
               <div class="progress">
-                <span class="js"></span>
+                <span class="full"></span>
               </div>
             </div>
           </div>
           <div class="progress-bar">
-            <p class="prog-title">ReactJS</p>
+            <p class="prog-title">React</p>
             <div class="progress-con">
-              <p class="prog-text">75%</p>
+              <p class="prog-text"></p>
               <div class="progress">
-                <span class="react"></span>
+                <span class="full"></span>
               </div>
             </div>
           </div>
           <div class="progress-bar">
-            <p class="prog-title">NodeJS</p>
+            <p class="prog-title">Angular</p>
             <div class="progress-con">
-              <p class="prog-text">87%</p>
+              <p class="prog-text"></p>
               <div class="progress">
-                <span class="node"></span>
+                <span class="full"></span>
               </div>
             </div>
           </div>
           <div class="progress-bar">
-            <p class="prog-title">Python</p>
+            <p class="prog-title">Nodejs</p>
             <div class="progress-con">
-              <p class="prog-text">70%</p>
               <div class="progress">
-                <span class="python"></span>
+                <span class="full"></span>
               </div>
             </div>
           </div>
         </div>
-      </div> -->
-        <h4 class="stat-title">My Timeline</h4>
-        <!-- <div class="timeline">
+      </div>
+      <h4 class="stat-title">My Timeline</h4>
+      <div class="timeline">
         <div class="timeline-item">
           <div class="tl-icon">
             <i class="fas fa-briefcase"></i>
           </div>
-          <p class="tl-duration">2010 - present</p>
-          <h5>Web Developer<span> - Vircrosoft</span></h5>
+          <p class="tl-duration">Sept 2022 - March 2023</p>
+          <h5>Web App Developer<span> - International Coverpool</span></h5>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+            Support in the digital transformation of the company with its web application, developed with
+            Angular, TypeScript, NodeJs, Bootstrap and MySQL.
+          </p>
+        </div>
+        <div class="timeline-item">
+          <div class="tl-icon">
+            <i class="fas fa-graduation-cap"></i>
+          </div>
+          <p class="tl-duration">Sept 2022 - March 2023</p>
+          <h5>Software Engineer<span> - Alboran Formación</span></h5>
+          <p>
+            Regulated training specialized in Java and MySQL, 700h.
+          </p>
+        </div>
+        <div class="timeline-item">
+          <div class="tl-icon">
+            <i class="fas fa-graduation-cap"></i>
+          </div>
+          <p class="tl-duration">Nov 2021 - March 2022</p>
+          <h5>front-end Developer<span> - Adalab</span></h5>
+          <p>
+            Bootcamp focused on front-end developing and some back-end notions. 600h.
+          </p>
+        </div>
+        <div class="timeline-item">
+          <div class="tl-icon">
+            <i class="fas fa-graduation-cap"></i>
+          </div>
+          <p class="tl-duration">2019 - 2020</p>
+          <h5>MBA - HR Specializated<span> - UCJC - IMF Business School</span></h5>
+          <p>
+            Master in Business Administration Specializated in Human Resources. Specialized studies in the role position
+            I was developing at that time.
           </p>
         </div>
         <div class="timeline-item">
           <div class="tl-icon">
             <i class="fas fa-briefcase"></i>
           </div>
-          <p class="tl-duration">2008 - 2011</p>
-          <h5>Software Engineer<span> - Boogle, Inc.</span></h5>
+          <p class="tl-duration">Jun 2016 - April 2022</p>
+          <h5>Human Resources Administrative<span> - Grupo Abades</span></h5>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+            Staff control and organization according to the demand for services. Hiring, Social Security
+            registration, payroll and severance pays. Accounting and administrative tasks.
           </p>
         </div>
         <div class="timeline-item">
           <div class="tl-icon">
-            <i class="fas fa-briefcase"></i>
+            <i class="fas fa-graduation-cap"></i>
           </div>
-          <p class="tl-duration">2016 - 2017</p>
-          <h5>C++ Programmer<span> - Slime Tech</span></h5>
+          <p class="tl-duration">2010 - 2012</p>
+          <h5>CFGS Administracion y Finanzas<span> - IES Zaidin Vergeles</span></h5>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+            Higher education focused on administration and both accounting and financial management of a company.
           </p>
         </div>
-        <div class="timeline-item">
-          <div class="tl-icon">
-            <i class="fas fa-briefcase"></i>
-          </div>
-          <p class="tl-duration">2009 - 2013</p>
-          <h5>Business Degree<span> - Sussex University</span></h5>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
-          </p>
-        </div>
-        <div class="timeline-item">
-          <div class="tl-icon">
-            <i class="fas fa-briefcase"></i>
-          </div>
-          <p class="tl-duration">2013 - 2016</p>
-          <h5>Computer Science Degree<span> - Brookes University</span></h5>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
-          </p>
-        </div>
-        <div class="timeline-item">
-          <div class="tl-icon">
-            <i class="fas fa-briefcase"></i>
-          </div>
-          <p class="tl-duration">2017 - present</p>
-          <h5>3d Animation<span> - Brighton University</span></h5>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
-          </p>
-        </div>
-      </div> -->
+      </div>
     </section>
     <section class="container" id="portfolio">
       <div class="main-title">
         <h2>My <span>Portfolio</span><span class="bg-text">My Work</span></h2>
       </div>
       <p class="port-text">
-        Here is some of my work that I've done in various programming languages.
+        Here is some of my work that I've done in various programming languages. This one is included!
       </p>
-      <!-- <div class="portfolios">
+      <div class="portfolios">
         <div class="portfolio-item">
           <div class="image">
-            <img src="img/port1.jpg" alt="">
+            <img src="img/port1.png" alt="screenshot of index page from Babsrm's portfolio">
           </div>
           <div class="hover-items">
-            <h3>Project Source</h3>
+            <h3>My portfolio</h3>
             <div class="icons">
-              <a href="#" class="icon">
+              <a href="https://github.com/Babsrm/portfolio" class="icon">
                 <i class="fab fa-github"></i>
-              </a>
-              <a href="#" class="icon">
-                <i class="fab fa-behance"></i>
-              </a>
-              <a href="#" class="icon">
-                <i class="fab fa-youtube"></i>
               </a>
             </div>
           </div>
         </div>
         <div class="portfolio-item">
           <div class="image">
-            <img src="img/port2.jpg" alt="">
+            <img src="img/port2.jpg" alt="screenshot of index page from Babsrm's database administrator">
           </div>
           <div class="hover-items">
-            <h3>Project Source</h3>
+            <h3>Database Admisnitrator</h3>
             <div class="icons">
-              <a href="#" class="icon">
+              <a href="https://github.com/Babsrm/gestion_empresa" class="icon">
                 <i class="fab fa-github"></i>
-              </a>
-              <a href="#" class="icon">
-                <i class="fab fa-behance"></i>
-              </a>
-              <a href="#" class="icon">
-                <i class="fab fa-youtube"></i>
               </a>
             </div>
           </div>
         </div>
         <div class="portfolio-item">
           <div class="image">
-            <img src="img/port3.jpg" alt="">
+            <img src="img/port3.jpg" alt="screenshot of the game from Babsrm's blackjack console game">
           </div>
           <div class="hover-items">
-            <h3>Project Source</h3>
+            <h3>Blackjack console</h3>
             <div class="icons">
-              <a href="#" class="icon">
+              <a href="https://github.com/Babsrm/blackjack-game" class="icon">
                 <i class="fab fa-github"></i>
-              </a>
-              <a href="#" class="icon">
-                <i class="fab fa-behance"></i>
-              </a>
-              <a href="#" class="icon">
-                <i class="fab fa-youtube"></i>
-              </a>
             </div>
           </div>
         </div>
-        <div class="portfolio-item">
+        <!-- <div class="portfolio-item">
           <div class="image">
             <img src="img/port4.jpg" alt="">
           </div>
@@ -299,127 +282,7 @@
               </a>
             </div>
           </div>
-        </div>
-        <div class="portfolio-item">
-          <div class="image">
-            <img src="img/port2.jpg" alt="">
-          </div>
-          <div class="hover-items">
-            <h3>Project Source</h3>
-            <div class="icons">
-              <a href="#" class="icon">
-                <i class="fab fa-github"></i>
-              </a>
-              <a href="#" class="icon">
-                <i class="fab fa-behance"></i>
-              </a>
-              <a href="#" class="icon">
-                <i class="fab fa-youtube"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="portfolio-item">
-          <div class="image">
-            <img src="img/port7.jpg" alt="">
-          </div>
-          <div class="hover-items">
-            <h3>Project Source</h3>
-            <div class="icons">
-              <a href="#" class="icon">
-                <i class="fab fa-github"></i>
-              </a>
-              <a href="#" class="icon">
-                <i class="fab fa-behance"></i>
-              </a>
-              <a href="#" class="icon">
-                <i class="fab fa-youtube"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div> -->
-    </section>
-    <section class="container" id="blogs">
-      <!-- <div class="blogs-content">
-        <div class="main-title">
-          <h2>My <span>Blogs</span><span class="bg-text">My Blogs</span></h2>
-        </div>
-        <div class="blogs">
-          <div class="blog">
-            <img src="img/port6.jpg" alt="">
-            <div class="blog-text">
-              <h4>
-                How to Create Your Own Website
-              </h4>
-              <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Doloribus natus voluptas, eos obcaecati recusandae amet?
-              </p>
-            </div>
-          </div>
-          <div class="blog">
-            <img src="img/blog1.jpg" alt="">
-            <div class="blog-text">
-              <h4>
-                How to Become an Expert in Web Design
-              </h4>
-              <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Doloribus natus voluptas, eos obcaecati recusandae amet?
-              </p>
-            </div>
-          </div>
-          <div class="blog">
-            <img src="img/blog2.jpg" alt="">
-            <div class="blog-text">
-              <h4>
-                Become a Web Designer in 10 Days
-              </h4>
-              <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Doloribus natus voluptas, eos obcaecati recusandae amet?
-              </p>
-            </div>
-          </div>
-          <div class="blog">
-            <img src="img/blog3.jpg" alt="">
-            <div class="blog-text">
-              <h4>
-                Debbuging made easy with Web Inspector
-              </h4>
-              <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Doloribus natus voluptas, eos obcaecati recusandae amet?
-              </p>
-            </div>
-          </div>
-          <div class="blog">
-            <img src="img/port1.jpg" alt="">
-            <div class="blog-text">
-              <h4>
-                Get started with Web Design and UI Design
-              </h4>
-              <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Doloribus natus voluptas, eos obcaecati recusandae amet?
-              </p>
-            </div>
-          </div>
-          <div class="blog">
-            <img src="img/port3.jpg" alt="">
-            <div class="blog-text">
-              <h4>
-                This is what you need to know about Web Design
-              </h4>
-              <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Doloribus natus voluptas, eos obcaecati recusandae amet?
-              </p>
-            </div>
-          </div>
-        </div>
-      </div> -->
+        </div> -->
     </section>
     <section class="container contact" id="contact">
       <div class="contact-container">
@@ -515,9 +378,6 @@
     </div>
     <div class="control" data-id="portfolio">
       <i class="fas fa-briefcase"></i>
-    </div>
-    <div class="control" data-id="blogs">
-      <i class="far fa-newspaper"></i>
     </div>
     <div class="control" data-id="contact">
       <i class="fas fa-envelope-open"></i>
