--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p>Welcome to my portfolio. Here you can discover about me and what I do.
         </p>
         <div class="btn-con">
-          <a href="https://drive.google.com/file/d/1i2YVuIMZxujArND8UbJxBtfAXrxF6i8W/view?usp=share_link" class="main-btn">
+          <a href="https://drive.google.com/file/d/1i2YVuIMZxujArND8UbJxBtfAXrxF6i8W/view?usp=share_link" target="_blank" class="main-btn">
             <span class="btn-text">Download CV</span>
             <span class="btn-icon"><i class="fas fa-download"></i></span>
           </a>
@@ -53,7 +53,7 @@
             professional career learning Java and that is what I am focused on. Currently I am leaning Spring framework.
           </p>
           <div class="btn-con">
-            <a href="https://drive.google.com/file/d/1i2YVuIMZxujArND8UbJxBtfAXrxF6i8W/view?usp=share_link" class="main-btn">
+            <a href="https://drive.google.com/file/d/1i2YVuIMZxujArND8UbJxBtfAXrxF6i8W/view?usp=share_link" target="_blank" class="main-btn">
               <span class="btn-text">Download CV</span>
               <span class="btn-icon"><i class="fas fa-download"></i></span>
             </a>
@@ -344,26 +344,6 @@
               </div>
             </div>
           </div>
-          <!-- <div class="right-contact">
-            <form action="" class="contact-form">
-              <div class="input-control i-c-2">
-                <input type="text" required placeholder="YOUR NAME">
-                <input type="email" required placeholder="YOUR EMAIL">
-              </div>
-              <div class="input-control">
-                <input type="text" required placeholder="ENTER SUBJECT">
-              </div>
-              <div class="input-control">
-                <textarea name="" id="" cols="15" rows="8" placeholder="Message Here..."></textarea>
-              </div>
-              <div class="submit-btn">
-                <a href="#" class="main-btn">
-                  <span class="btn-text">Download CV</span>
-                  <span class="btn-icon"><i class="fas fa-download"></i></span>
-                </a>
-              </div>
-            </form>
-          </div> -->
         </div>
       </div>
     </section>
