añadido boton de cambiar idioma

--- a/index.html
+++ b/index.html
@@ -366,6 +366,9 @@
   <div class="theme-btn">
     <i class="fas fa-adjust"></i>
   </div>
+  <div class="lang-btn">
+    <i class="fas fa-globe"></i>
+  </div>
   <script src="app.js"></script>
 </body>
 
