--- a/index.html
+++ b/index.html
@@ -28,348 +28,21 @@
           Hi, I am <span>Barbara:</span>
           Java developer.
         </h1>
-        <p>Welcome to my portfolio. Here you can discover about me and what I do.
-        </p>
+        <p>Choose your language:</p>
         <div class="btn-con">
-          <a href="https://drive.google.com/file/d/1i2YVuIMZxujArND8UbJxBtfAXrxF6i8W/view?usp=share_link" target="_blank" class="main-btn">
-            <span class="btn-text">Download CV</span>
-            <span class="btn-icon"><i class="fas fa-download"></i></span>
+          <a href="eng.html" class="main-btn">
+            <span class="btn-text">English</span>
+            <span class="btn-icon"><i class="fas fa-globe"></i></i></span>
+          </a><a href="esp.html" class="main-btn">
+            <span class="btn-text">Spanish</span>
+            <span class="btn-icon"><i class="fas fa-globe"></i></span>
           </a>
         </div>
       </div>
     </div>
   </header>
   <main>
-    <section class="container about" id="about">
-      <div class="main-title">
-        <h2>About <span>me</span><span class="bg-text">my stats</span></h2>
-      </div>
-      <div class="about-container">
-        <div class="left-about">
-          <h4>Information About me</h4>
-          <p>
-            I am from a small town near Córdoba, Spain. I started my journey in development in November 2021. I studied
-            a front-end bootcamp where I have discovered about JavaScript and ReactJS. Later, I continued my
-            professional career learning Java and that is what I am focused on. Currently I am leaning Spring framework.
-          </p>
-          <div class="btn-con">
-            <a href="https://drive.google.com/file/d/1i2YVuIMZxujArND8UbJxBtfAXrxF6i8W/view?usp=share_link" target="_blank" class="main-btn">
-              <span class="btn-text">Download CV</span>
-              <span class="btn-icon"><i class="fas fa-download"></i></span>
-            </a>
-          </div>
-        </div>
-        <div class="right-about">
-          <div class="about-item">
-            <div class="abt-text">
-              <p class="large-text">5</p>
-              <p class="small-text">Projects <br /> Completed</p>
-            </div>
-          </div>
-          <div class="about-item">
-            <div class="abt-text">
-              <p class="large-text">1</p>
-              <p class="small-text">Year of <br /> experience</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="about-stats">
-        <h4 class="stat-title">My Skills</h4>
-        <div class="progress-bars">
-          <div class="progress-bar">
-            <p class="prog-title">Java</p>
-            <div class="progress-con">
-              <p class="prog-text"></p>
-              <div class="progress">
-                <span class="full"></span>
-              </div>
-            </div>
-          </div>
-          <div class="progress-bar">
-            <p class="prog-title">MySQL</p>
-            <div class="progress-con">
-              <p class="prog-text"></p>
-              <div class="progress">
-                <span class="full"></span>
-              </div>
-            </div>
-          </div>
-          <div class="progress-bar">
-            <p class="prog-title">JavaScript</p>
-            <div class="progress-con">
-              <p class="prog-text"></p>
-              <div class="progress">
-                <span class="full"></span>
-              </div>
-            </div>
-          </div>
-          <div class="progress-bar">
-            <p class="prog-title">React</p>
-            <div class="progress-con">
-              <p class="prog-text"></p>
-              <div class="progress">
-                <span class="full"></span>
-              </div>
-            </div>
-          </div>
-          <div class="progress-bar">
-            <p class="prog-title">Angular</p>
-            <div class="progress-con">
-              <p class="prog-text"></p>
-              <div class="progress">
-                <span class="full"></span>
-              </div>
-            </div>
-          </div>
-          <div class="progress-bar">
-            <p class="prog-title">Nodejs</p>
-            <div class="progress-con">
-              <div class="progress">
-                <span class="full"></span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <h4 class="stat-title">My Timeline</h4>
-      <div class="timeline">
-        <div class="timeline-item">
-          <div class="tl-icon">
-            <i class="fas fa-briefcase"></i>
-          </div>
-          <p class="tl-duration">Sept 2022 - March 2023</p>
-          <h5>Web App Developer<span> - International Coverpool</span></h5>
-          <p>
-            Support in the digital transformation of the company with its web application, developed with
-            Angular, TypeScript, NodeJs, Bootstrap and MySQL.
-          </p>
-        </div>
-        <div class="timeline-item">
-          <div class="tl-icon">
-            <i class="fas fa-graduation-cap"></i>
-          </div>
-          <p class="tl-duration">Sept 2022 - March 2023</p>
-          <h5>Software Engineer<span> - Alboran Formación</span></h5>
-          <p>
-            Regulated training specialized in Java and MySQL, 700h.
-          </p>
-        </div>
-        <div class="timeline-item">
-          <div class="tl-icon">
-            <i class="fas fa-graduation-cap"></i>
-          </div>
-          <p class="tl-duration">Nov 2021 - March 2022</p>
-          <h5>front-end Developer<span> - Adalab</span></h5>
-          <p>
-            Bootcamp focused on front-end developing and some back-end notions. 600h.
-          </p>
-        </div>
-        <div class="timeline-item">
-          <div class="tl-icon">
-            <i class="fas fa-graduation-cap"></i>
-          </div>
-          <p class="tl-duration">2019 - 2020</p>
-          <h5>MBA - HR Specializated<span> - UCJC - IMF Business School</span></h5>
-          <p>
-            Master in Business Administration Specializated in Human Resources. Specialized studies in the role position
-            I was developing at that time.
-          </p>
-        </div>
-        <div class="timeline-item">
-          <div class="tl-icon">
-            <i class="fas fa-briefcase"></i>
-          </div>
-          <p class="tl-duration">Jun 2016 - April 2022</p>
-          <h5>Human Resources Administrative<span> - Grupo Abades</span></h5>
-          <p>
-            Staff control and organization according to the demand for services. Hiring, Social Security
-            registration, payroll and severance pays. Accounting and administrative tasks.
-          </p>
-        </div>
-        <div class="timeline-item">
-          <div class="tl-icon">
-            <i class="fas fa-graduation-cap"></i>
-          </div>
-          <p class="tl-duration">2010 - 2012</p>
-          <h5>CFGS Administracion y Finanzas<span> - IES Zaidin Vergeles</span></h5>
-          <p>
-            Higher education focused on administration and both accounting and financial management of a company.
-          </p>
-        </div>
-      </div>
-    </section>
-    <section class="container" id="portfolio">
-      <div class="main-title">
-        <h2>My <span>Portfolio</span><span class="bg-text">My Work</span></h2>
-      </div>
-      <p class="port-text">
-        Here is some of my work that I've done in various programming languages. This one is included!
-      </p>
-      <div class="portfolios">
-        <div class="portfolio-item">
-          <div class="image">
-            <img src="img/port1.png" alt="screenshot of index page from Babsrm's portfolio">
-          </div>
-          <div class="hover-items">
-            <h3>My portfolio</h3>
-            <div class="icons">
-              <a href="https://github.com/Babsrm/portfolio" class="icon">
-                <i class="fab fa-github"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="portfolio-item">
-          <div class="image">
-            <img src="img/port2.jpg" alt="screenshot of index page from Babsrm's database administrator">
-          </div>
-          <div class="hover-items">
-            <h3>Database Admisnitrator</h3>
-            <div class="icons">
-              <a href="https://github.com/Babsrm/gestion_empresa" class="icon">
-                <i class="fab fa-github"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="portfolio-item">
-          <div class="image">
-            <img src="img/port3.jpg" alt="screenshot of the game from Babsrm's blackjack console game">
-          </div>
-          <div class="hover-items">
-            <h3>Blackjack console</h3>
-            <div class="icons">
-              <a href="https://github.com/Babsrm/blackjack-game" class="icon">
-                <i class="fab fa-github"></i>
-            </div>
-          </div>
-        </div>
-        <!-- <div class="portfolio-item">
-          <div class="image">
-            <img src="img/port4.jpg" alt="">
-          </div>
-          <div class="hover-items">
-            <h3>Project Source</h3>
-            <div class="icons">
-              <a href="#" class="icon">
-                <i class="fab fa-github"></i>
-              </a>
-              <a href="#" class="icon">
-                <i class="fab fa-behance"></i>
-              </a>
-              <a href="#" class="icon">
-                <i class="fab fa-youtube"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="portfolio-item">
-          <div class="image">
-            <img src="img/port5.jpg" alt="">
-          </div>
-          <div class="hover-items">
-            <h3>Project Source</h3>
-            <div class="icons">
-              <a href="#" class="icon">
-                <i class="fab fa-github"></i>
-              </a>
-              <a href="#" class="icon">
-                <i class="fab fa-behance"></i>
-              </a>
-              <a href="#" class="icon">
-                <i class="fab fa-youtube"></i>
-              </a>
-            </div>
-          </div>
-        </div> -->
-    </section>
-    <section class="container contact" id="contact">
-      <div class="contact-container">
-        <div class="main-title">
-          <h2>Contact <span>Me</span><span class="bg-text">Contact</span></h2>
-        </div>
-        <div class="contact-content-con">
-          <div class="left-contact">
-            <h4>Contact me here</h4>
-            <p>
-              Do you like my work or have any question? I am glad to help you. Reach me:
-            </p>
-            <div class="contact-info">
-              <div class="contact-item">
-                <div class="icon">
-                  <i class="fas fa-map-marker-alt"></i>
-                  <span>Location:</span>
-                </div>
-                <p>
-                  Montilla, Córdoba. Spain
-                </p>
-              </div>
-              <div class="contact-item">
-                <div class="icon">
-                  <i class="fas fa-envelope"></i>
-                  <span>Email:</span>
-                </div>
-                <p>
-                  <span>babsruizm@gmail.com</span>
-                </p>
-              </div>
-              <div class="contact-item">
-                <div class="icon">
-                  <i class="fas fa-phone-alt"></i>
-                  <span>Mobile Number: </span>
-                </div>
-                <p>
-                  <span>(+34) 661561274</span>
-                </p>
-              </div>
-              <div class="contact-item">
-                <div class="icon">
-                  <i class="fas fa-globe-africa"></i>
-                  <span>Languages:</span>
-                </div>
-                <p>
-                  <span>English, Spanish</span>
-                </p>
-              </div>
-            </div>
-            <div class="contact-icons">
-              <div class="contact-icon">
-                <a href="https://www.linkedin.com/in/barbararm1/" target="_blank">
-                  <i class="fab fa-linkedin-in"></i>
-                </a>
-                <a href="https://github.com/Babsrm" target="_blank">
-                  <i class="fab fa-github"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
   </main>
-
-  <div class="controls">
-    <div class="control active-btn" data-id="home">
-      <i class="fas fa-home"></i>
-    </div>
-    <div class="control" data-id="about">
-      <i class="fas fa-user"></i>
-    </div>
-    <div class="control" data-id="portfolio">
-      <i class="fas fa-briefcase"></i>
-    </div>
-    <div class="control" data-id="contact">
-      <i class="fas fa-envelope-open"></i>
-    </div>
-  </div>
-  <div class="theme-btn">
-    <i class="fas fa-adjust"></i>
-  </div>
-  <div class="lang-btn">
-    <i class="fas fa-globe"></i>
-  </div>
-  <script src="app.js"></script>
 </body>
 
 </html>
